--- a/package.json
+++ b/package.json
@@ -8,28 +8,41 @@
     "dist/"
   ],
   "scripts": {
+    "generate": "stencil generate",
+    "prebuild": "npm run clean",
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
+    "lint": "npm run eslint && npm run prettier -- --check",
+    "fmt": "npm run eslint -- --fix && npm run prettier -- --write",
+    "prettier": "prettier \"**/*{.ts,.tsx}\"",
+    "eslint": "eslint src/**/*{.ts,.tsx}",
     "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watch",
+    "test:watch": "stencil test --spec --e2e --watch",
     "clean": "rimraf www",
-    "build:android": "npm run clean && npm run build && npx cap sync android",
-    "build:ios": "npm run clean && npm run build && npx cap sync ios",
-    "generate": "stencil generate",
+    "build:android": "npm run build && npx cap sync android",
+    "build:ios": "npm run build && npx cap sync ios",
     "serve": "serve -s www"
   },
   "devDependencies": {
+    "@capacitor-community/bluetooth-le": "file:../bluetooth-le",
     "@capacitor/android": "^2.4.5",
     "@capacitor/cli": "^2.4.5",
     "@capacitor/core": "^2.4.5",
     "@capacitor/ios": "^2.4.5",
     "@ionic/core": "^5.5.2",
+    "@ionic/eslint-config": "^0.3.0",
     "@stencil/core": "^2.3.0",
+    "@stencil/eslint-plugin": "^0.3.1",
     "@types/jest": "^26.0.19",
-    "@capacitor-community/bluetooth-le": "file:..",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "typescript": "^4.1.3"
   },
   "dependencies": {}
 }
