﻿update android to cap v3

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "devDependencies": {
     "@capacitor-community/bluetooth-le": "file:../bluetooth-le",
-    "@capacitor/android": "^2.4.6",
-    "@capacitor/cli": "^2.4.6",
-    "@capacitor/core": "^2.4.6",
-    "@capacitor/ios": "^2.4.6",
+    "@capacitor/android": "^3.0.0-beta.1",
+    "@capacitor/cli": "^3.0.0-beta.1",
+    "@capacitor/core": "^3.0.0-beta.1",
+    "@capacitor/ios": "^3.0.0-beta.1",
     "@ionic/core": "^5.5.5",
     "@ionic/eslint-config": "^0.3.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
