--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -3,4 +3,4 @@ include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
 
 include ':capacitor-community-bluetooth-le'
-project(':capacitor-community-bluetooth-le').projectDir = new File('../node_modules/@capacitor-community/bluetooth-le/android')
+project(':capacitor-community-bluetooth-le').projectDir = new File('../../bluetooth-le/android')
