--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/ios": "^2.4.6",
     "@ionic/core": "^5.5.4",
     "@ionic/eslint-config": "^0.3.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@stencil/core": "^2.4.0",
     "@stencil/eslint-plugin": "^0.3.1",
     "@types/jest": "^26.0.20",
@@ -42,7 +43,8 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "serve": "^11.3.2",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "uvu": "^0.5.1"
   },
   "dependencies": {}
 }
