--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -10,7 +10,7 @@ def capacitor_pods
   # Automatic Capacitor Pod dependencies, do not delete
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
-  pod 'CapacitorCommunityBluetoothLe', :path => '../../..'
+  pod 'CapacitorCommunityBluetoothLe', :path => '../../../bluetooth-le'
   # Do not delete
 end
 
