--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean": "rimraf www",
     "build:android": "npm run build && npx cap sync android",
     "build:ios": "npm run build && npx cap sync ios",
-    "serve": "serve -s www"
+    "serve": "serve -s www",
+    "version": "node scripts/version.js"
   },
   "devDependencies": {
     "@capacitor-community/bluetooth-le": "file:../bluetooth-le",
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "read-package-json": "^3.0.1",
     "rimraf": "^3.0.2",
     "serve": "^11.3.2",
     "typescript": "^4.2.3",
