--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "allowUnreachableCode": false,
     "declaration": false,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "lib": ["dom", "es2017"],
     "moduleResolution": "node",
     "module": "esnext",
