--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist/"
   ],
   "scripts": {
+    "clean:install": "npx rimraf package-lock.json && npx rimraf node_modules && npm i",
     "generate": "stencil generate",
     "prebuild": "npm run clean && npm run version",
     "build": "stencil build",
