--- a/package.json
+++ b/package.json
@@ -26,28 +26,30 @@
     "version": "node scripts/version.js"
   },
   "devDependencies": {
-    "@capacitor-community/bluetooth-le": "file:../bluetooth-le",
-    "@capacitor/android": "^3.0.0",
     "@capacitor/cli": "^3.0.0",
-    "@capacitor/core": "^3.0.0",
-    "@capacitor/ios": "^3.0.0",
-    "@ionic/core": "^5.6.7",
     "@ionic/eslint-config": "^0.3.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@stencil/core": "^2.5.2",
     "@stencil/eslint-plugin": "^0.3.1",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "eslint": "^7.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.23.2",
-    "jest": "^26.6.3",
+    "jest": "^27.0.1",
     "prettier": "^2.3.0",
     "read-package-json": "^3.0.1",
     "rimraf": "^3.0.2",
     "serve": "^11.3.2",
-    "typescript": "^4.2.4",
-    "uvu": "^0.5.1"
+    "typescript": "^4.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@capacitor-community/bluetooth-le": "file:../bluetooth-le",
+    "@capacitor/android": "^3.0.0",
+    "@capacitor/core": "^3.0.0",
+    "@capacitor/ios": "^3.0.0",
+    "@capacitor/splash-screen": "^1.0.0",
+    "@ionic/core": "^5.6.8",
+    "uvu": "^0.5.1"
+  }
 }
